# TesteStress-GowGame-Marcus

./: Cargo.toml  Dockerfile  TESTE_MANUAL.md  docker-compose.yml  init.sql  nginx.conf  package-lock.json  package.json  run.sh  run_stress_test.sh
src/: database.rs  handlers.rs  main.rs  models.rs
tests/: desafio_gow.js  desafio_interno_k6.js
